Checkstyle errors from 21k to less than 4k