@@ -2,23 +2,20 @@
  * NoteListImpl.java
  * Created on 21.02.2003, 15:43:26 Alex
  * Package: net.sf.memoranda
- * 
+ *
  * @author Alex V. Alishevskikh, alex@openmechanics.net
  * Copyright (c) 2003 Memoranda Team. http://memoranda.sf.net
  */
 package main.java.memoranda;
-import java.util.Collection;
-import java.util.Vector;
 
-import main.java.memoranda.date.CalendarDate;
-import main.java.memoranda.date.CurrentDate;
-import main.java.memoranda.util.Util;
-import nu.xom.Attribute;
-import nu.xom.Document;
-import nu.xom.Element;
-import nu.xom.Elements;
+import main.java.memoranda.date.*;
+import main.java.memoranda.util.*;
+import nu.xom.*;
+
+import java.util.*;
+
 /**
- * 
+ *
  */
 /*$Id: NoteListImpl.java,v 1.14 2004/10/28 11:30:15 alexeya Exp $*/
 public class NoteListImpl implements NoteList {
@@ -39,11 +36,11 @@ public class NoteListImpl implements NoteList {
     }
 
     public NoteListImpl(Project prj) {
-    	
+
         //_root = new Element("noteslist", NS_JNNL);
         _root = new Element("noteslist");
         _doc = new Document(_root);
-        _project = prj;    
+        _project = prj;
     }
 
     public Collection getAllNotes() {
@@ -57,17 +54,17 @@ public class NoteListImpl implements NoteList {
                 Vector ds = m.getDays();
                 for (int di = 0; di < ds.size(); di++) {
                     Day d = (Day) ds.get(di);
-					Vector ns = d.getNotes();
-					for(int ni = 0; ni < ns.size(); ni++) {
-						NoteElement n = (NoteElement) ns.get(ni);
-						v.add(new NoteImpl(n.getElement(), _project));
-					}
+                    Vector ns = d.getNotes();
+                    for (int ni = 0; ni < ns.size(); ni++) {
+                        NoteElement n = (NoteElement) ns.get(ni);
+                        v.add(new NoteImpl(n.getElement(), _project));
+                    }
                 }
             }
         }
         return v;
     }
-    
+
     /**
      * @see main.java.memoranda.NoteList#getMarkedNotes()
      */
@@ -82,17 +79,17 @@ public class NoteListImpl implements NoteList {
                 Vector ds = m.getDays();
                 for (int di = 0; di < ds.size(); di++) {
                     Day d = (Day) ds.get(di);
-					Vector ns = d.getNotes();
-					for(int ni = 0; ni < ns.size(); ni++) {
-						NoteElement ne = (NoteElement) ns.get(ni);
-						Note n = new NoteImpl(ne.getElement(), _project);
-						if (n.isMarked()) v.add(n);
+                    Vector ns = d.getNotes();
+                    for (int ni = 0; ni < ns.size(); ni++) {
+                        NoteElement ne = (NoteElement) ns.get(ni);
+                        Note n = new NoteImpl(ne.getElement(), _project);
+                        if (n.isMarked()) v.add(n);
+                    }
                 }
             }
         }
+        return v;
     }
-	        return v;
-	}
 
     public Collection getNotesForPeriod(CalendarDate startDate, CalendarDate endDate) {
         Vector v = new Vector();
@@ -109,13 +106,13 @@ public class NoteListImpl implements NoteList {
                         for (int di = 0; di < days.size(); di++) {
                             Day d = (Day) days.get(di);
                             if (!((m.getValue() == startDate.getMonth()) && (d.getValue() < startDate.getDay()))
-							|| !((m.getValue() == endDate.getMonth()) && (d.getValue() > endDate.getDay()))) {
-								Vector ns = d.getNotes();
-								for(int ni = 0; ni < ns.size(); ni++) {
-									NoteElement n = (NoteElement) ns.get(ni);
-									v.add(new NoteImpl(n.getElement(), _project));
-								}
-							}
+                                || !((m.getValue() == endDate.getMonth()) && (d.getValue() > endDate.getDay()))) {
+                                Vector ns = d.getNotes();
+                                for (int ni = 0; ni < ns.size(); ni++) {
+                                    NoteElement n = (NoteElement) ns.get(ni);
+                                    v.add(new NoteImpl(n.getElement(), _project));
+                                }
+                            }
                         }
                     }
                 }
@@ -124,23 +121,24 @@ public class NoteListImpl implements NoteList {
         return v;
     }
 
-	/**
-	 * returns the first note for a date.
-	 * @param CalendarDate
-	 * @return Note
-	 */
-	 
+    /**
+     * returns the first note for a date.
+     *
+     * @param CalendarDate
+     * @return Note
+     */
+
     public Note getNoteForDate(CalendarDate date) {
         Day d = getDay(date);
         if (d == null)
             return null;
-		Vector ns = d.getNotes();
-		if(ns.size()>0) {
-			NoteElement n = (NoteElement) ns.get(0);
-			Note currentNote = new NoteImpl(n.getElement(), _project);
-			return currentNote; 
-		}
-		return null;
+        Vector ns = d.getNotes();
+        if (ns.size() > 0) {
+            NoteElement n = (NoteElement) ns.get(0);
+            Note currentNote = new NoteImpl(n.getElement(), _project);
+            return currentNote;
+        }
+        return null;
         //return new NoteImpl(d.getElement(), _project);
     }
 
@@ -152,13 +150,13 @@ public class NoteListImpl implements NoteList {
         if (m == null)
             m = y.createMonth(date.getMonth());
         Day d = m.getDay(date.getDay());
-        if (d == null) 
+        if (d == null)
             d = m.createDay(date.getDay());
-		NoteElement ne = d.createNote(Util.generateId());
+        NoteElement ne = d.createNote(Util.generateId());
         return new NoteImpl(ne.getElement(), _project);
     }
-    
-     /*
+
+    /*
      * @see net.sf.memoranda.NoteList#removeNoteForDate(net.sf.memoranda.date.CalendarDate)
      */
 /*    public void removeNoteForDate(CalendarDate date) {
@@ -167,27 +165,28 @@ public class NoteListImpl implements NoteList {
         d.getElement().getParent().removeChild(d.getElement());             
     }
 */
-	 public void removeNote(CalendarDate date, String id) {
+    public void removeNote(CalendarDate date, String id) {
         Day d = getDay(date);
         if (d == null) return;
-		Vector ns = d.getNotes();
-		for(int i=0;i<ns.size();i++) {
-			NoteElement n = (NoteElement) ns.get(i);
-			Element ne = n.getElement();
-			if(ne.getAttribute("refid").getValue().equals(id)) d.getElement().removeChild(n.getElement());
-		}
+        Vector ns = d.getNotes();
+        for (int i = 0; i < ns.size(); i++) {
+            NoteElement n = (NoteElement) ns.get(i);
+            Element ne = n.getElement();
+            if (ne.getAttribute("refid").getValue().equals(id))
+                d.getElement().removeChild(n.getElement());
+        }
 //		CurrentNote.set(null);
     }
-	
+
     public Note getActiveNote() {
         //return CurrentNote.get(); 
-    	return getNoteForDate(CurrentDate.get());
-    	// FIXED: Must return the first note for today [alexeya]
+        return getNoteForDate(CurrentDate.get());
+        // FIXED: Must return the first note for today [alexeya]
     }
 
     private Year getYear(int y) {
         Elements yrs = _root.getChildElements("year");
-        String yy = new Integer(y).toString();
+        String yy = Integer.valueOf(y).toString();
         for (int i = 0; i < yrs.size(); i++)
             if (yrs.get(i).getAttribute("year").getValue().equals(yy))
                 return new Year(yrs.get(i));
@@ -197,19 +196,20 @@ public class NoteListImpl implements NoteList {
 
     private Year createYear(int y) {
         Element el = new Element("year");
-        el.addAttribute(new Attribute("year", new Integer(y).toString()));
+        el.addAttribute(new Attribute("year", Integer.valueOf(y).toString()));
         _root.appendChild(el);
         return new Year(el);
     }
-/*
-    private Vector getYears() {
-        Vector v = new Vector();
-        Elements yrs = _root.getChildElements("year");
-        for (int i = 0; i < yrs.size(); i++)
-            v.add(new Year(yrs.get(i)));
-        return v;
-    }
-*/
+
+    /*
+        private Vector getYears() {
+            Vector v = new Vector();
+            Elements yrs = _root.getChildElements("year");
+            for (int i = 0; i < yrs.size(); i++)
+                v.add(new Year(yrs.get(i)));
+            return v;
+        }
+    */
     private Day getDay(CalendarDate date) {
         Year y = getYear(date.getYear());
         if (y == null)
@@ -228,12 +228,12 @@ public class NoteListImpl implements NoteList {
         }
 
         public int getValue() {
-            return new Integer(yearElement.getAttribute("year").getValue()).intValue();
+            return Integer.parseInt(yearElement.getAttribute("year").getValue());
         }
 
         public Month getMonth(int m) {
             Elements ms = yearElement.getChildElements("month");
-            String mm = new Integer(m).toString();
+            String mm = Integer.valueOf(m).toString();
             for (int i = 0; i < ms.size(); i++)
                 if (ms.get(i).getAttribute("month").getValue().equals(mm))
                     return new Month(ms.get(i));
@@ -243,7 +243,7 @@ public class NoteListImpl implements NoteList {
 
         private Month createMonth(int m) {
             Element el = new Element("month");
-            el.addAttribute(new Attribute("month", new Integer(m).toString()));
+            el.addAttribute(new Attribute("month", Integer.valueOf(m).toString()));
             yearElement.appendChild(el);
             return new Month(el);
         }
@@ -270,14 +270,14 @@ public class NoteListImpl implements NoteList {
         }
 
         public int getValue() {
-            return new Integer(mElement.getAttribute("month").getValue()).intValue();
+            return Integer.parseInt(mElement.getAttribute("month").getValue());
         }
 
         public Day getDay(int d) {
             if (mElement == null)
                 return null;
             Elements ds = mElement.getChildElements("day");
-            String dd = new Integer(d).toString();
+            String dd = Integer.valueOf(d).toString();
             for (int i = 0; i < ds.size(); i++)
                 if (ds.get(i).getAttribute("day").getValue().equals(dd))
                     return new Day(ds.get(i));
@@ -287,7 +287,7 @@ public class NoteListImpl implements NoteList {
 
         private Day createDay(int d) {
             Element el = new Element("day");
-            el.addAttribute(new Attribute("day", new Integer(d).toString()));
+            el.addAttribute(new Attribute("day", Integer.valueOf(d).toString()));
 /*            el.addAttribute(
                 new Attribute(
                     "date",
@@ -317,11 +317,11 @@ public class NoteListImpl implements NoteList {
 
     }
 
-	
-	/*
-	 * private class Day
-	 */
-	 
+
+    /*
+     * private class Day
+     */
+
     private class Day {
         Element dEl = null;
 
@@ -330,31 +330,31 @@ public class NoteListImpl implements NoteList {
             // Added to fix old '.notes' XML format 
             // Old-style XML is converted on the fly [alexeya]
             if (dEl.getAttribute("date") != null) {
-            	Attribute dAttr = dEl.getAttribute("date");
-            	Attribute tAttr = dEl.getAttribute("title");
-				Element nEl = new Element("note");
-				String date = dAttr.getValue().replace('/', '-');
-				nEl.addAttribute(new Attribute("refid", date));
-				nEl.addAttribute(new Attribute("title", tAttr.getValue()));
-				dEl.appendChild(nEl);
-            	dEl.removeAttribute(dAttr);            	
-				dEl.removeAttribute(tAttr);
+                Attribute dAttr = dEl.getAttribute("date");
+                Attribute tAttr = dEl.getAttribute("title");
+                Element nEl = new Element("note");
+                String date = dAttr.getValue().replace('/', '-');
+                nEl.addAttribute(new Attribute("refid", date));
+                nEl.addAttribute(new Attribute("title", tAttr.getValue()));
+                dEl.appendChild(nEl);
+                dEl.removeAttribute(dAttr);
+                dEl.removeAttribute(tAttr);
             }
         }
 
         public int getValue() {
-            return new Integer(dEl.getAttribute("day").getValue()).intValue();
+            return Integer.parseInt(dEl.getAttribute("day").getValue());
         }
 
         /*public Note getNote() {
             return new NoteImpl(dEl);
         }*/
-		
-		public NoteElement getNote(String d) {
-            if (dEl == null) 
-				return null;
+
+        public NoteElement getNote(String d) {
+            if (dEl == null)
+                return null;
             Elements ne = dEl.getChildElements("note");
-            
+
             for (int i = 0; i < ne.size(); i++)
                 if (ne.get(i).getAttribute("refid").getValue().equals(d))
                     return new NoteElement(ne.get(i));
@@ -373,7 +373,7 @@ public class NoteListImpl implements NoteList {
                         10,
                         10,
                         2004).toString()));
-*/						
+*/
             dEl.appendChild(el);
             return new NoteElement(el);
         }
@@ -384,7 +384,7 @@ public class NoteListImpl implements NoteList {
             Vector v = new Vector();
             Elements ds = dEl.getChildElements("note");
             for (int i = 0; i < ds.size(); i++)
-                v.add(new NoteElement(ds.get(i)));                                    
+                v.add(new NoteElement(ds.get(i)));
             return v;
         }
 
@@ -392,31 +392,30 @@ public class NoteListImpl implements NoteList {
             return dEl;
         }
     }
-	
-	
-	/*
-	 * private class Day
-	 */
-	 
-	private class NoteElement {
-		Element nEl;
-		
-		public NoteElement(Element el) {
-			nEl = el;
-		}
-		
-		public Element getElement() {
-			return nEl;
-		}
-	}
-	
+
+
+    /*
+     * private class Day
+     */
+
+    private class NoteElement {
+        Element nEl;
+
+        public NoteElement(Element el) {
+            nEl = el;
+        }
+
+        public Element getElement() {
+            return nEl;
+        }
+    }
+
     /**
      * @see main.java.memoranda.NoteList#getXMLContent()
      */
     public Document getXMLContent() {
         return _doc;
     }
-   
-    
+
 
 }
