@@ -1,35 +1,13 @@
 package main.java.memoranda.ui;
 
-import java.awt.BorderLayout;
-import java.awt.Dimension;
-import java.awt.FlowLayout;
-import java.awt.Insets;
-import java.awt.event.ActionEvent;
-import java.awt.event.MouseAdapter;
-import java.awt.event.MouseEvent;
-import java.awt.event.KeyListener;
-import java.awt.event.KeyEvent;
+import main.java.memoranda.*;
+import main.java.memoranda.date.*;
+import main.java.memoranda.util.*;
 
-import javax.swing.ImageIcon;
-import javax.swing.JButton;
-import javax.swing.JCheckBoxMenuItem;
-import javax.swing.JMenuItem;
-import javax.swing.JOptionPane;
-import javax.swing.JPanel;
-import javax.swing.JPopupMenu;
-import javax.swing.JTabbedPane;
-import javax.swing.JToolBar;
-import javax.swing.event.ChangeEvent;
-import javax.swing.event.ListSelectionEvent;
-import javax.swing.event.ListSelectionListener;
-
-import main.java.memoranda.CurrentNote;
-import main.java.memoranda.CurrentProject;
-import main.java.memoranda.Note;
-import main.java.memoranda.date.CurrentDate;
-import main.java.memoranda.util.Configuration;
-import main.java.memoranda.util.CurrentStorage;
-import main.java.memoranda.util.Local;
+import javax.swing.*;
+import javax.swing.event.*;
+import java.awt.*;
+import java.awt.event.*;
 
 /*$Id: NotesControlPanel.java,v 1.16 2005/05/05 16:19:16 ivanrise Exp $*/
 public class NotesControlPanel extends JPanel {
@@ -47,19 +25,18 @@ public class NotesControlPanel extends JPanel {
     JPanel buttonsPanel = new JPanel();
     JMenuItem ppAddBkmrk = new JMenuItem();
     JMenuItem ppClearNote = new JMenuItem();
-//    JMenuItem ppInvertSort = new JMenuItem();
-	JCheckBoxMenuItem ppInvertSort = new JCheckBoxMenuItem();
+    //    JMenuItem ppInvertSort = new JMenuItem();
+    JCheckBoxMenuItem ppInvertSort = new JCheckBoxMenuItem();
     JPopupMenu notesPPMenu = new JPopupMenu();
     JMenuItem ppOpenNote = new JMenuItem();
     JMenuItem ppRemoveBkmrk = new JMenuItem();
 
-	
+
     public NotesControlPanel() {
         try {
             jbInit();
 
-        }
-        catch (Exception ex) {
+        } catch (Exception ex) {
             new ExceptionDialog(ex);
         }
     }
@@ -134,10 +111,10 @@ public class NotesControlPanel extends JPanel {
             }
         });
         ppInvertSort.setEnabled(true);
-		boolean descSort =
-			(Configuration.get("NOTES_SORT_ORDER").equals("true"));
-		ppInvertSort.setSelected(descSort);
-		
+        boolean descSort =
+            (Configuration.get("NOTES_SORT_ORDER").equals("true"));
+        ppInvertSort.setSelected(descSort);
+
         ppRemoveBkmrk.setFont(new java.awt.Font("Dialog", 1, 11));
         ppRemoveBkmrk.setText(Local.getString("Remove bookmark"));
         ppRemoveBkmrk.addActionListener(new java.awt.event.ActionListener() {
@@ -154,7 +131,7 @@ public class NotesControlPanel extends JPanel {
         this.add(toolBar, BorderLayout.NORTH);
         buttonsPanel.add(ppOpenB, null);
         toolBar.add(buttonsPanel, null);
-        toolBar.addSeparator();        
+        toolBar.addSeparator();
         this.add(tabbedPane, BorderLayout.CENTER);
 
         PopupListener lst = new PopupListener();
@@ -163,7 +140,7 @@ public class NotesControlPanel extends JPanel {
         searchPanel.notesList.addMouseListener(lst);
         ListSelectionListener lsl = new ListSelectionListener() {
             public void valueChanged(ListSelectionEvent e) {
-		ppSetEnabled();
+                ppSetEnabled();
             }
         };
         notesListPanel.notesList.getSelectionModel().addListSelectionListener(lsl);
@@ -172,26 +149,30 @@ public class NotesControlPanel extends JPanel {
         notesList = notesListPanel.notesList;
         notesPPMenu.add(ppOpenNote);
         notesPPMenu.add(ppInvertSort);
-        notesPPMenu.addSeparator();        
+        notesPPMenu.addSeparator();
         notesPPMenu.add(ppAddBkmrk);
         notesPPMenu.add(ppRemoveBkmrk);
         notesPPMenu.addSeparator();
         notesPPMenu.add(ppClearNote);
 
-		// remove notes using the DEL key
-		KeyListener delNotes = new KeyListener() {
-			public void keyPressed(KeyEvent e){
-				if(e.getKeyCode()==KeyEvent.VK_DELETE) {
-					ppClearNote_actionPerformed(null);
-				}
-			}
-			public void	keyReleased(KeyEvent e){}
-			public void keyTyped(KeyEvent e){} 
-		};
-		
-		notesListPanel.notesList.addKeyListener(delNotes);
-		bookmarksListPanel.notesList.addKeyListener(delNotes);
-		searchPanel.notesList.addKeyListener(delNotes);
+        // remove notes using the DEL key
+        KeyListener delNotes = new KeyListener() {
+            public void keyPressed(KeyEvent e) {
+                if (e.getKeyCode() == KeyEvent.VK_DELETE) {
+                    ppClearNote_actionPerformed(null);
+                }
+            }
+
+            public void keyReleased(KeyEvent e) {
+            }
+
+            public void keyTyped(KeyEvent e) {
+            }
+        };
+
+        notesListPanel.notesList.addKeyListener(delNotes);
+        bookmarksListPanel.notesList.addKeyListener(delNotes);
+        searchPanel.notesList.addKeyListener(delNotes);
     }
 
     public void refresh() {
@@ -200,21 +181,21 @@ public class NotesControlPanel extends JPanel {
     }
 
     void tabbedPane_stateChanged(ChangeEvent e) {
-	if(notesList!=null) notesList.clearSelection();
+        if (notesList != null) notesList.clearSelection();
         switch (tabbedPane.getSelectedIndex()) {
-            case 0 :
+            case 0:
                 notesList = notesListPanel.notesList;
                 break;
-            case 1 :
+            case 1:
                 notesList = bookmarksListPanel.notesList;
                 break;
-            case 2 :
+            case 2:
                 notesList = searchPanel.notesList;
                 break;
         }
 
-	ppAddBkmrk.setEnabled(false);
-	ppRemoveBkmrk.setEnabled(false);
+        ppAddBkmrk.setEnabled(false);
+        ppRemoveBkmrk.setEnabled(false);
     }
 
     class PopupListener extends MouseAdapter {
@@ -225,26 +206,26 @@ public class NotesControlPanel extends JPanel {
         }
 
         public void mousePressed(MouseEvent e) {
-             maybeShowPopup(e);
-         }
-        
-         public void mouseReleased(MouseEvent e) {
-             maybeShowPopup(e);
-         }
-        
-         private void maybeShowPopup(MouseEvent e) {
-             if (e.isPopupTrigger()) {
-                 notesPPMenu.show(e.getComponent(), e.getX(), e.getY());
-             }
-         }
+            maybeShowPopup(e);
+        }
+
+        public void mouseReleased(MouseEvent e) {
+            maybeShowPopup(e);
+        }
+
+        private void maybeShowPopup(MouseEvent e) {
+            if (e.isPopupTrigger()) {
+                notesPPMenu.show(e.getComponent(), e.getX(), e.getY());
+            }
+        }
     }
 
     void setActiveNote() {
-        Note note = (Note) notesList.getNote(notesList.getSelectedIndex());
+        Note note = notesList.getNote(notesList.getSelectedIndex());
         CurrentDate.set(note.getDate());
-		CurrentNote.set(note,true);
+        CurrentNote.set(note, true);
     }
-   
+
 
     void ppOpenB_actionPerformed(ActionEvent e) {
         notesPPMenu.show(
@@ -255,12 +236,12 @@ public class NotesControlPanel extends JPanel {
 
     void ppAddBkmrk_actionPerformed(ActionEvent e) {
         for (int i = 0; i < notesList.getSelectedIndices().length; i++) {
-            Note note = (Note) notesList.getNote(notesList.getSelectedIndices()[i]);
+            Note note = notesList.getNote(notesList.getSelectedIndices()[i]);
             note.setMark(true);
         }
         notesList.updateUI();
         bookmarksListPanel.notesList.update();
-	ppSetEnabled();
+        ppSetEnabled();
     }
 
     void ppClearNote_actionPerformed(ActionEvent e) {
@@ -278,7 +259,7 @@ public class NotesControlPanel extends JPanel {
             msg =
                 Local.getString("Clear note")
                     + "\n'"
-                    + ((Note) notesList.getNote(notesList.getSelectedIndex())).getDate().getFullDateString()
+                    + notesList.getNote(notesList.getSelectedIndex()).getDate().getFullDateString()
                     + "'\n"
                     + Local.getString("Are you sure?");
 
@@ -292,56 +273,57 @@ public class NotesControlPanel extends JPanel {
             return;
 
         for (int i = 0; i < notesList.getSelectedIndices().length; i++) {
-            Note note = (Note) notesList.getNote(notesList.getSelectedIndices()[i]);
-			if(CurrentProject.getNoteList().getActiveNote() != null && note.getDate().equals(CurrentProject.getNoteList().getActiveNote().getDate())){ 
-				/*Debug*/ System.out.println("[DEBUG] Current note removed");
-				CurrentNote.set(null,true);
-			}
-			CurrentProject.getNoteList().removeNote(note.getDate(), note.getId());
-			CurrentStorage.get().removeNote(note);
+            Note note = notesList.getNote(notesList.getSelectedIndices()[i]);
+            if (CurrentProject.getNoteList().getActiveNote() != null && note.getDate().equals(CurrentProject.getNoteList().getActiveNote().getDate())) {
+                /*Debug*/
+                System.out.println("[DEBUG] Current note removed");
+                CurrentNote.set(null, true);
+            }
+            CurrentProject.getNoteList().removeNote(note.getDate(), note.getId());
+            CurrentStorage.get().removeNote(note);
         }
         bookmarksListPanel.notesList.update();
-		searchPanel.notesList.update();
-		notesListPanel.notesList.update();
+        searchPanel.notesList.update();
+        notesListPanel.notesList.update();
         notesList.updateUI();
-		notesList.clearSelection();
+        notesList.clearSelection();
 //		notesList.requestFocus();*/
 //		((AppFrame)App.getFrame()).workPanel.dailyItemsPanel.editorPanel.editor.requestFocus();
     }
-	
+
     void ppOpenNote_actionPerformed(ActionEvent e) {
         setActiveNote();
     }
 
     void ppInvertSort_actionPerformed(ActionEvent e) {
-		Configuration.put(
-			"NOTES_SORT_ORDER",
-			new Boolean(ppInvertSort.isSelected()));
-		Configuration.saveConfig();
+        Configuration.put(
+            "NOTES_SORT_ORDER",
+            Boolean.valueOf(ppInvertSort.isSelected()));
+        Configuration.saveConfig();
         notesList.invertSortOrder();
         notesList.update();
     }
 
     void ppRemoveBkmrk_actionPerformed(ActionEvent e) {
         for (int i = 0; i < notesList.getSelectedIndices().length; i++) {
-            Note note = (Note) notesList.getNote(notesList.getSelectedIndices()[i]);
+            Note note = notesList.getNote(notesList.getSelectedIndices()[i]);
             note.setMark(false);
         }
         bookmarksListPanel.notesList.update();
-	ppSetEnabled();
+        ppSetEnabled();
         notesList.updateUI();
-	notesList.clearSelection();
-	((AppFrame)App.getFrame()).workPanel.dailyItemsPanel.editorPanel.editor.requestFocus();	
+        notesList.clearSelection();
+        App.getFrame().workPanel.dailyItemsPanel.editorPanel.editor.requestFocus();
     }
 
     void ppSetEnabled() {
-    boolean enbl = (notesList.getModel().getSize() > 0) && (notesList.getSelectedIndex() > -1);
+        boolean enbl = (notesList.getModel().getSize() > 0) && (notesList.getSelectedIndex() > -1);
 
-    ppRemoveBkmrk.setEnabled(enbl && (((Note) notesList.getNote(notesList.getSelectedIndex())).isMarked())
-    				|| notesList.getSelectedIndices().length > 1);
-    ppAddBkmrk.setEnabled(enbl && !(((Note) notesList.getNote(notesList.getSelectedIndex())).isMarked())
-    				|| notesList.getSelectedIndices().length > 1);
-    ppOpenNote.setEnabled(enbl);
-    ppClearNote.setEnabled(enbl);
+        ppRemoveBkmrk.setEnabled(enbl && (notesList.getNote(notesList.getSelectedIndex()).isMarked())
+            || notesList.getSelectedIndices().length > 1);
+        ppAddBkmrk.setEnabled(enbl && !(notesList.getNote(notesList.getSelectedIndex()).isMarked())
+            || notesList.getSelectedIndices().length > 1);
+        ppOpenNote.setEnabled(enbl);
+        ppClearNote.setEnabled(enbl);
     }
 }
